# umbral-agent-stack

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_INSTRUCTIONS.md  CONTRIBUTING.md  README.md  err.txt  pyproject.toml  refactor_tests.py  result.txt  result2.txt  test.txt  test_output.txt
.agents/: PROTOCOL.md  board.md  para-claude.md  para-rick.md  prompts-079-080.md  prompts-081-082-083.md  prompts-081-082.md  prompts-084-085-086.md  prompts-087-088-089.md  prompts-090-091-092-093.md  prompts-094-codex-dashboard-notion.md  prompts-095-codex-docs-board.md  prompts-096-codex-instrucciones-y-revision.md  prompts-096-codex-supervisor-notion.md  prompts-097-codex-supervisor-notion.md  rick-vps-message.md
.claude/: settings.local.json
.github/: copilot-instructions.md
changelog/: 2026-02-26.md  2026-05-06.md  2026-05-19.md
client/: worker_client.py
config/: aec_keywords.yaml  auth_lifecycle.example.yaml  client_tiers.yaml  quota_policy.yaml  source_verifier.yaml  supervisors.yaml  team_workflows.yaml  teams.yaml  tool_policy.yaml
copilot_agent/: __init__.py  __main__.py  agent.py
dispatcher/: __init__.py  alert_manager.py  ambiguity_signal.py  health.py  intent_classifier.py  linear_webhook.py  model_router.py  notion_poller.py  queue.py  quota_tracker.py  requirements.txt  rick_mention.py  router.py  scheduler.py  service.py  smart_reply.py  supervisor_observability.py  supervisor_resolution.py  task_history.py  task_routing.py  team_config.py  workflow_engine.py
docs/: 00-overview.md  01-architecture-v2.3.md  02-implementation-log.md  03-setup-vps-openclaw.md  04-setup-telegram-vps.md  05-setup-tailscale.md  06-setup-worker-windows.md  07-worker-api-contract.md  08-operations-runbook.md  09-troubleshooting.md  10-security-notes.md  11-roadmap-next-steps.md  12-vps-audit-2026-02-26.md  13-vm-audit-2026-02-26.md  14-codex-plan.md  15-model-quota-policy.md  16-audit-codex-verification.md  17-continuity-and-next-steps.md  18-notion-enlace-rick-convention.md  19-openclaw-claude-quota.md  20-vm-to-vps-worker-migration.md  21-vps-autosufficient-dual-worker.md  22-notion-dashboard-gerencial.md  23-s5-tool-policy-pad.md  24-s6-langfuse-observability.md  25-s6-evals-ooda.md  26-s7-hardening.md  27-notion-kanban-tracking.md  28-rick-github-workflow.md  29-repo-structure-and-projects.md  30-linear-notion-architecture.md  (+108 more)
infra/: secrets.py  (+9 more)
(+1448 files in other folders)
