[project]
name = "umbral-agent-stack"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.25.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "google-auth>=2.0.0,<3.0.0",
    "langfuse>=2.0.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.53.0",
]
docs = [
    "python-docx>=1.1.0",
    "docxtpl>=0.16.0",
    "fpdf2>=2.7.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
]
test = [
    "pytest>=7.0.0",
    "fakeredis>=2.0.0",
    "python-docx>=1.1.0",
    "docxtpl>=0.16.0",
    "fpdf2>=2.7.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
]
all = [
    "umbral-agent-stack[browser,docs,test]",
    "weasyprint>=61.0",
]

[tool.setuptools.packages.find]
include = ["worker*", "dispatcher*", "client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
