[project]
name = "umbral-agent-stack"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.25.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "google-auth>=2.0.0,<3.0.0",
    "langfuse>=2.0.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "mcp[cli]>=1.0.0,<2.0.0",
    "github-copilot-sdk>=0.2.0,<1.0.0",
    "azure-search-documents>=11.4.0,<12.0.0",
    "azure-identity>=1.15.0,<2.0.0",
    "markdownify>=0.11.6,<1.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.53.0",
]
docs = [
    "python-docx>=1.1.0",
    "docxtpl>=0.16.0",
    "fpdf2>=2.7.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
]
test = [
    "pytest>=7.0.0",
    "fakeredis>=2.0.0",
    "beautifulsoup4>=4.12",
    "python-docx>=1.1.0",
    "docxtpl>=0.16.0",
    "fpdf2>=2.7.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0,<4.0.0",
]
youtube = [
    "yt-dlp>=2024.4.9",
    "youtube-transcript-api>=0.6.2",
]
discovery = [
    "rapidfuzz>=3.0.0,<4.0.0",
]
all = [
    "umbral-agent-stack[browser,docs,test,youtube,discovery]",
    "weasyprint>=61.0",
]

[tool.setuptools.packages.find]
include = ["worker*", "dispatcher*", "client*", "mcp_server*", "copilot_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
